* 2014-03-26 - thorben.betten@open-xchange.com

 - Fix for bug 31770: Retrieve deferrer URL from config-cascade look-up

* 2014-03-25 - thorben.betten@open-xchange.com

 - Fix for bug 31747: Added property to adjust JVM XML entityExpansionLimit o certain needs
 - Fix for bug 31745: Mention the unit for property "com.openexchange.sessiond.sessionDefaultLifeTime"
 - Fix for bug 31189: Added appropriate display message for error code "MSG-0014"

* 2014-03-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 31716: Don't rely on cookies being accepted by WebDAV clients  

* 2014-03-24 - thorben.betten@open-xchange.com

 - Fix for bug 31727: Improved descriptions for database-based and script-based password-change bundles
 - Fix for bug 31717: Improved description of "com.openexchange.servlet.maxInactiveInterval" property

* 2014-03-24 - steffen.templin@open-xchange.com

 - Fix for Bug 31037: Enlarged DB columns for fileName and fileType in preview table

* 2014-03-23 - thorben.betten@open-xchange.com

 - Fix for bug 31677: Properly do the thread-sort for subscribed POP3 accounts accessed via Unified Mail
 - Fix for bug 22930: Fixed SQL query to determine non-hierarchically-visible public folders
 - Fix for bug 31714: Set upper limits for width/height parameter on image transformation request

* 2014-03-21 - thorben.betten@open-xchange.com

 - Fix for bug 31366: Support configurable formats for logged login/logout events

* 2014-03-21 - tobias.friedrich@open-xchange.com

 - Fix for bug 31705: Always populate all field names during Portable serialization  

* 2014-03-21 - marcus.klein@open-xchange.com

 - Fix for bug 31707: Method did not list empty file stores due to wrong SQL statement. Corrected that SQL statement.

* 2014-03-20 - thorben.betten@open-xchange.com

 - Fix for bug 31657: Drop "webmail" capability for context administrator if "com.openexchange.mail.adminMailLoginEnabled" is set to "false"

* 2014-03-19 - jan.bauerdick@open-xchange.com
